--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>About</button>
+          </li>
+
+          <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
@@ -223,7 +227,7 @@
       -->
 
       <article class="portfolio" data-page="projects">
-        <div class="load" onclick="loadPage('#loadportfolio', 'pages/portfolio.html')"> </div>
+        <div class="load" onclick="loadPage('#loadportfolio', 'pages/projects.html')"> </div>
         <div id="loadportfolio"> </div>
       </article>
 
@@ -232,7 +236,7 @@
       -->
 
       <article class="blog" data-page="achievements">
-        <div class="load" onclick="loadPage('#loadblog', 'pages/blog.html')"> </div>
+        <div class="load" onclick="loadPage('#loadblog', 'pages/achievements.html')"> </div>
         <div id="loadblog"> </div>
       </article>
 
