--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 
       <article class="resume" data-page="about">
-        <div id="resume" class="load" onclick="loadPage('#loadresume', 'pages/about.html')"> </div>
+        <div id="resume" class="load" onclick="loadPage('#loadabout', 'pages/about.html')"> </div>
         <div id="loadresume"> </div>
       </article>
 
