--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,7 +69,7 @@
               <ion-icon name="eye-outline"></ion-icon>
             </div>
   
-            <img src="./assets/img/projects/parkCar" alt="finance" loading="lazy">
+            <img src="./assets/img/projects/parkCar.png" alt="finance" loading="lazy">
           </figure>
   
           <h3 class="project-title">Finance</h3>
