--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
       -->
 
 
-      <article class="resume" data-page="about">
-        <div id="resume" class="load" onclick="loadPage('#loadabout', 'pages/about.html')"> </div>
-        <div id="loadresume"> </div>
+      <article class="about active" data-page="about">
+        <div id="about" class="load" onclick="loadPage('#loadabout', 'pages/about.html')"> </div>
+        <div id="loadabout"> </div>
       </article>
 
       <article class="resume" data-page="resume">
