--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
         </ul>
 
 
-        <!-- <div class="separator"><separator-->></div>
+        <div class="separator"></div>
         
         <div class="separator"></div>
 
-        <!-- <ul class="contacts-list">
+        <ul class="contacts-list">
 
           <li class="contact-item">
 
@@ -144,7 +144,7 @@
 
           </li>
 
-        </ul> -->
+        </ul>
 
       </div>
 
@@ -180,13 +180,13 @@
             <button class="navbar-link" data-nav-link>Projects</button>
           </li>
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Achievements</button>
           </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Leadership</button>
-          </li>
+          </li> -->
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -235,10 +235,10 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="achievements">
+      <!-- <article class="blog" data-page="achievements">
         <div class="load" onclick="loadPage('#loadblog', 'pages/achievements.html')"> </div>
         <div id="loadblog"> </div>
-      </article>
+      </article> -->
 
       <!--
         - #CONTACT
