--- a/pages/resume.html
+++ b/pages/resume.html
@@ -267,7 +267,7 @@
       <li class="timeline-item">
         <h4 class="h4 timeline-item-title">RISE-BUET Internal Student Research Grant, November 2023</h4>
         <p class="timeline-text">
-          Awarded with <a href="https://ayeshathoi.github.io/files/Certificates/Grant.pdf" target="_blank">grant</a>
+          Awarded with <a href="https://ayeshathoi.github.io/files/Certificates/Grant.pdf" target="_blank" class="timeline-text-link">grant</a>
           for undergraduate thesis project.
           </p>
       </li>
@@ -275,10 +275,8 @@
       <li class="timeline-item">
         <h4 class="h4 timeline-item-title">Scholarships, 2014-2024</h4>
         <p class="timeline-text">
-          Talentpool Scholarship, HSC 2018, 5th place holder (1st among girls) in Comilla Board, See 
-          <a href="files/Certificates/HSC-Stipend.pdf" target="_blank"> Details</a> <br>
-          Talentpool Scholarship, SSC 2016, 8th place holder in Comilla Board, See 
-          <a href="files/Certificates/SSC-Stipend.pdf" target="_blank"> Details</a> <br>
+          Talentpool Scholarship, HSC 2018, 5th place holder (1st among girls) in Comilla Board, See <a href="files/Certificates/HSC-Stipend.pdf" target="_blank"> Details</a> <br>
+          Talentpool Scholarship, SSC 2016, 8th place holder in Comilla Board, See <a href="files/Certificates/SSC-Stipend.pdf" target="_blank"> Details</a> <br>
           General Scholarship, JSC 2013, Comilla Board.
           </p>
       </li>
