--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
     <ul>
       <li class="service-item">
         <div class="service-icon-box">
-          <img src="./assets/images/graduated.svg" alt="graduated icon" width="40">
+          <ion-icon name="school-outline"></ion-icon>
         </div>
         <div class="service-content-box">
           <h4 class="h4 service-item-title">Graduated from BUET</h4>
@@ -32,7 +32,7 @@
 
       <li class="service-item">
         <div class="service-icon-box">
-          <img src="./assets/images/teaching.svg" alt="teaching icon" width="40">
+          <ion-icon name="newspaper-outline"></ion-icon>
         </div>
         <div class="service-content-box">
           <h4 class="h4 service-item-title">Landed First Job Offer</h4>
