--- a/pages/resume.html
+++ b/pages/resume.html
@@ -253,7 +253,7 @@
       </li>
       <li class="timeline-item">
         <h4 class="h4 timeline-item-title">SUST DEEP LEARNING ENIGMA 1.0 Finalists, 2024</h4>
-        <p class="timeline-text">"BUET Weights & Biases" became 8th out of 98 teams in the final round of the competition, See
+        <p class="timeline-text">"BUET Weights & Biases" became 8th out of 98 teams in the final round of the competition.
           <a href="https://www.kaggle.com/competitions/dl-enigma-10-sust-cse-carnival-2024/leaderboard?tab=public" target="_blank" class="timeline-text-link">Leaderboard</a>
         </p>
       </li>
@@ -261,14 +261,14 @@
         <h4 class="h4 timeline-item-title">NSysS Research Poster Presentation, December 2023</h4>
         <p class="timeline-text">
           <a href="https://ayeshathoi.github.io/files/posters/NSysS_Student_Poster_LLM_Thesis.pdf" target="_blank">View Poster</a>
-           of my LLM thesis in the conference, <a href="https://cse.buet.ac.bd/nsyss2023/" target="_blank">NSysS 2023</a></p>
+           </p>
       </li>
 
       <li class="timeline-item">
         <h4 class="h4 timeline-item-title">RISE-BUET Internal Student Research Grant, November 2023</h4>
         <p class="timeline-text">
-          Awarded with <a href="https://ayeshathoi.github.io/files/Certificates/Grant.pdf" target="_blank" class="timeline-text-link">grant</a>
-          for undergraduate thesis project.
+          <a href="https://ayeshathoi.github.io/files/Certificates/Grant.pdf" target="_blank" class="timeline-text-link">View Details</a>
+          
           </p>
       </li>
 
