--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Projects</button>
-          </li>
-
-          <!-- <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Achievements</button>
+            <button class="navbar-link" data-nav-link>Research</button>
           </li>
 
           <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Projects</button>
+          </li>
+
+          <!-- <li class="navbar-item"> 
             <button class="navbar-link" data-nav-link>Leadership</button>
           </li> -->
 
@@ -235,10 +235,10 @@
         - #BLOG
       -->
 
-      <!-- <article class="blog" data-page="achievements">
-        <div class="load" onclick="loadPage('#loadblog', 'pages/achievements.html')"> </div>
+      <article class="blog" data-page="achievements">
+        <div class="load" onclick="loadPage('#loadblog', 'pages/research.html')"> </div>
         <div id="loadblog"> </div>
-      </article> -->
+      </article>
 
       <!--
         - #CONTACT
