--- a/index.html
+++ b/index.html
@@ -221,7 +221,15 @@
       
 
 
+      <!--
+        - #BLOG
+      -->
 
+      <article class="blog" data-page="research">
+        <div class="load" onclick="loadPage('#loadblog', 'pages/research.html')"> </div>
+        <div id="loadblog"> </div>
+      </article>
+      
       <!--
         - #PORTFOLIO
       -->
@@ -230,16 +238,6 @@
         <div class="load" onclick="loadPage('#loadportfolio', 'pages/projects.html')"> </div>
         <div id="loadportfolio"> </div>
       </article>
-
-      <!--
-        - #BLOG
-      -->
-
-      <article class="blog" data-page="achievements">
-        <div class="load" onclick="loadPage('#loadblog', 'pages/research.html')"> </div>
-        <div id="loadblog"> </div>
-      </article>
-
       <!--
         - #CONTACT
       -->
