--- a/pages/resume.html
+++ b/pages/resume.html
@@ -356,9 +356,9 @@
         <p class="timeline-text">ISSB Long Course-80</p>
         <span>2018</span>
         <p class="timeline-text">
-          - Yellow Card Holder, selected for Bangladesh Army Commissioned Officer Rank <br>
+          <a href="../files/Certificates/ISSB TEST Result.pdf">Yellow Card Holder, selected for Bangladesh Army</a>
           - Medical Test : Passed <br>
-          <a href="../files/Certificates/ISSB TEST Result.pdf">Yellow Card Holder, selected for Bangladesh Army Commissioned Officer Rank</a>
+         
           
 
         </p>
