--- a/pages/resume.html
+++ b/pages/resume.html
@@ -31,7 +31,7 @@
       </li>
 
       <li class="filter-item">
-        <button data-filter-btn>Extracurricular activities</button>
+        <button data-filter-btn>Extracurricular</button>
       </li>
   
     </ul>
@@ -392,8 +392,12 @@
   
     <ol class="timeline-list">
       <li class="timeline-item">
-        <h4 class="h4 timeline-item-title">Game Development</h4>
-        <ul class="project-list">
+        <h4 class="h4 timeline-item-title">Game Development</h4>]
+      </li>
+      </ol>
+  </section>
+      
+  <ul class="project-list">
   
           <li class="project-item  active" data-filter-item data-category="web development">
             <a href="#">
@@ -414,7 +418,7 @@
       
             </a>
           </li>
-      </li>
+  </ul>
 
 
 
