--- a/pages/resume.html
+++ b/pages/resume.html
@@ -396,7 +396,7 @@
       </li>
       </ol>
   </section>
-  <section>
+  <section class="projects">
   <ul class="project-list">
   
           <li class="project-item  active">
