--- a/pages/projects.html
+++ b/pages/projects.html
@@ -87,7 +87,7 @@
               <ion-icon name="eye-outline"></ion-icon>
             </div>
   
-            <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+            <img src="../assets/img/PI/Game Development/angry.jpg" alt="orizon" loading="lazy">
           </figure>
   
           <h3 class="project-title">Orizon</h3>
