--- a/pages/resume.html
+++ b/pages/resume.html
@@ -4,14 +4,14 @@
   </header>
   <section class="projects">
   
-    <ul class="filter-list">
+    <ul>
   
-      <li class="filter-item">
+      <li>
         <button class="active" data-filter-btn>All</button>
       </li>
   
-      <li class="filter-item">
-        <button data-filter-btn>Work Experience</button>
+      <li>
+        <button leadership-btn>Work Experience</button>
       </li>
   
       <li class="filter-item">
@@ -332,7 +332,7 @@
         
       </div>
   
-      <h3 class="h3" id="ts" data-dropdown-item>Leadership Activities</h3>
+      <h3 class="h3" id="leadership">Leadership Activities</h3>
     </div>
     
     <ol class="timeline-list">
