--- a/pages/resume.html
+++ b/pages/resume.html
@@ -424,7 +424,7 @@
                 <div class="project-item-icon-box">
                   <ion-icon name="eye-outline"></ion-icon>
                 </div>
-                <img src="./assets/images/project-8.jpg" alt="Zelda">
+                <img src="./assets/img/PI/Game Development/Zelda.png" alt="Zelda">
               </figure>
       
               <h3 class="project-title">Zelda</h3>
