--- a/pages/resume.html
+++ b/pages/resume.html
@@ -456,8 +456,8 @@
   <ol class="timeline-list">
     <li class="timeline-item">
       <h4 class="h4 timeline-item-title">Music</h4>
-      <p class="timeline-text"> I have studied music in Bangladesh Shishu Academy, Chittagong for 4 years. I can play harmonium professionally. I can also play keyboard and kalimba. I am trying to learn ukulele in my free time. I have also performed in various cultural programs. You can visit my music playlist. </p>
-      <a href="https://www.youtube.com/playlist?list=PLh5_wktv4jtzmb4_urdpsycVHxDzGcp9Z" target="_blank">Music Playlist</a>
+      <p class="timeline-text"> I have studied music in Bangladesh Shishu Academy, Chittagong for 4 years. I can play harmonium professionally. I can also play keyboard and kalimba. I am trying to learn ukulele in my free time. I have also performed in various cultural programs. </p>
+      <a href="https://www.youtube.com/playlist?list=PLh5_wktv4jtzmb4_urdpsycVHxDzGcp9Z" target="_blank">My music Playlist</a>
     </li>
     <li class="timeline-item">
       <h4 class="h4 timeline-item-title">Writing, Photoshop, Adobe Illustration</h4>
