--- a/pages/resume.html
+++ b/pages/resume.html
@@ -2,87 +2,7 @@
   <header>
     <h2 class="h2 article-title">Resume</h2>
   </header>
-  <section class="projects">
-  
-    <ul>
-  
-      <li>
-        <button class="active" data-filter-btn>All</button>
-      </li>
-  
-      <li>
-        <button leadership>Work Experience</button>
-      </li>
-  
-      <li class="filter-item">
-        <button data-filter-btn>Education</button>
-      </li>
-  
-      <li class="filter-item">
-        <button data-filter-btn>Technical Skills</button>
-      </li>
-
-      <li class="filter-item">
-        <button data-filter-btn>Achievements</button>
-      </li>
-
-      <li class="filter-item">
-        <button data-filter-btn>Leadership</button>
-      </li>
-
-      <li class="filter-item">
-        <button data-filter-btn>Extracurricular</button>
-      </li>
-  
-    </ul>
-  
-    <div class="filter-select-box">
-  
-      <button class="filter-select" data-select>
-  
-        <div class="select-value" data-selecct-value>Select category</div>
-  
-        <div class="select-icon">
-          <ion-icon name="chevron-down"></ion-icon>
-        </div>
-  
-      </button>
-  
-      <ul class="select-list">
-  
-        <li class="select-item">
-          <button data-select-item>All</button>
-        </li>
-  
-        <li class="select-item">
-          <button data-select-item>Work Experience</button>
-        </li>
-  
-        <li class="select-item">
-          <button data-select-item>Education</button>
-        </li>
-  
-        <li class="select-item">
-          <button data-select-item>Technical Skills</button>
-        </li>
-
-        <li class="select-item">
-          <button data-select-item>Achievements</button>
-        </li>
-
-        <li class="select-item">
-          <button data-select-item>Leadership</button>
-        </li>
-
-        <li class="select-item">
-          <button data-select-item>Extracurricular</button>
-        </li>
-  
-      </ul>
-  
-    </div>
-  
-  
+<!--Use tag so that they can smoothly   -->
     <section class="timeline" >      
       <div class="title-wrapper">
         <div class="icon-box">
@@ -447,9 +367,9 @@
       
             </a>
           </li>
-  </ul>
-  </ol>
-</li>
+      </ul>
+      </ol>
+
     <br> <br>
     <li class="timeline-item">
       <h4 class="h4 timeline-item-title">Music</h4>
@@ -502,7 +422,7 @@
                 <img src="./assets/img/PI/essay.png" alt="Journal" loading="lazy">
               </figure>
       
-              <h3 class="project-title">প্রতীতি : Journal </h3>
+              <h3 class="project-title">প্রতীতি : Journal [with Link]</h3>
             </a>
           </li>
   </ul>
