--- a/pages/resume.html
+++ b/pages/resume.html
@@ -309,6 +309,8 @@
   
       <h3 class="h3" id="ts" data-dropdown-item>Extracurricular Activities</h3>
     </div>
+  
+    <ol class="timeline-list">
       <li class="timeline-item">
         <h4 class="h4 timeline-item-title">Game Development</h4>
         <ul class="project-list">
@@ -363,7 +365,7 @@
         
               </a>
             </li>
-        </ul>
+      </ul>
     </li>
     <li class="timeline-item">
       <h4 class="h4 timeline-item-title">Music</h4>
@@ -419,9 +421,10 @@
               <h3 class="project-title">প্রতীতি : Journal [Link]</h3>
             </a>
           </li>
-  </ul>
+      </ul>
     </li>
-  </ol>
+    </ol>
+
   </section>
 
   
