--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,6 +1,6 @@
 <div>
   <header>
-    <h2 class="h2 article-title">Under construction</h2>
+    <h2 class="h2 article-title">Projects</h2>
   </header>
   
   <section class="projects">
