--- a/pages/resume.html
+++ b/pages/resume.html
@@ -2,44 +2,34 @@
   <header>
     <h2 class="h2 article-title">Resume</h2>
   </header>
-<!--Use tag so that they can smoothly   -->
-<!-- Work Experience, education, technical skills, achievements, leadership, extracurricular id -->
+
 <section class="projects">
-  
-  <ul class="filter-list">
+  <ul>
+      <li class="resume-item">
+          <a href="#ex">Work Experience</a>
+      </li>
 
-    <li class="filter-item">
-      <button href="#ex">
-        Work Experience</button>
-    </li>
+      <li class="resume-item">
+          <a href="#e">Education</a>
+      </li>
 
-    <li class="filter-item">
-      <button href="#e">
-        Education</button>
-    </li>
+      <li class="resume-item">
+          <a href="#s">Technical Skills</a>
+      </li>
 
-    <li class="filter-item">
-      <button href="#s">
-        Technical Skills</button>
-    </li>
+      <li class="resume-item">
+          <a href="#a">Achievements</a>
+      </li>
 
-    <li class="filter-item">
-      <button href="#a">
-        Achievements</button>
-    </li>
+      <li class="resume-item">
+          <a href="#l">Leadership</a>
+      </li>
 
-    <li class="filter-item">
-      <button href="#l">
-        Leadership</button>
-    </li>
-
-    <li class="filter-item">
-      <button href="#ext">
-        Extracurricular</button>
-    </li>
-
+      <li class="resume-item">
+          <a href="#ext">Extracurricular</a>
+      </li>
   </ul>
-  </section>
+</section>
     <section class="timeline" id="ex">      
       <div class="title-wrapper">
         <div class="icon-box">
