--- a/pages/resume.html
+++ b/pages/resume.html
@@ -3,7 +3,7 @@
     <h2 class="h2 article-title">Resume</h2>
   </header>
 
-<section class="projects">
+<section class="resume-lists">
   <ul>
       <li class="resume-item">
           <a href="#ex">Work Experience</a>
