--- a/pages/resume.html
+++ b/pages/resume.html
@@ -113,13 +113,12 @@
         <p class="timeline-text">
           <a href="ugrad.html" target="_blank">Undergraduate Labworks Webpage</a> 
         </p>
-        <br><br>
+        <br>
           <div class="multicol-list">
             <div class="blog-text">Notable Courses</div>
             <p class="timeline-text">
-              <b>Notable Courses: </b>
               <br>
-              <table border="1">
+              <table border="1" style="color: white;">
               <tr>
                 <td>CSE471- Machine Learning</td>
                 <td>CSE309- Compiler Design</td>
