--- a/pages/resume.html
+++ b/pages/resume.html
@@ -385,7 +385,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="./assets/img/PI/Game Development/spacewars.png" alt="spacewars" loading="lazy">
+                  <img src="./assets/img/PI/Game Development/spacewars.png" alt="spacewars">
                 </figure>
         
                 <h3 class="project-title">SpaceWars</h3>
@@ -444,7 +444,7 @@
                 <div class="project-item-icon-box">
                   <ion-icon name="eye-outline"></ion-icon>
                 </div>
-                <img src="./assets/img/PI/essay.png" alt="Journal" loading="lazy">
+                <img src="./assets/img/PI/essay.png" alt="Journal">
               </figure>
       
               <h3 class="project-title">প্রতীতি : Journal [Link]</h3>
