--- a/pages/research.html
+++ b/pages/research.html
@@ -1,6 +1,6 @@
 <div>
   <header>
-    <h2 class="h2 article-title">Under construction</h2>
+    <h2 class="h2 article-title">Research Experience</h2>
   </header>
 
   <section class="blog-posts">
