--- a/pages/research.html
+++ b/pages/research.html
@@ -55,12 +55,8 @@
             <h3 class="h3 blog-item-title">Best fonts every designer</h3> -->
 
             <p class="blog-text">
-              We perform function call graph and code summary augmented few-shot prompting
-              for closed-source LLMs (GPT-3.5 Turbo, GPT-4, GPT-4o and Gemini-1.0-Pro), and also
-              fine-tune open-source LLMs (Llama 2, Code Llama, Llama 3) with quantized low-rank
-              adaptation to improve the state-of-the-art performance of review comment and 
-              code refinement generation tasks, supported by a human evaluation study on 
-              CodeReviewer Dataset by Microsoft Research. 
+              My undergraduate thesis project was under Dr. Anindya Iqbal and Dr. Toufique Ahmed (PostDoc, UC Davis). We studied the efficacy of language models, in automating code review and code refinement activities using few-shot prompting and Parameter-efficient Fine-tuning. We augmented static program metadata (function call graph) and natural language summary (produced with codeT5-base) with human evaluation to improve code review and code refinement generation tasks. Few-shot examples are retrieved from the training dataset using BM-25 retrieval algorithm. We used GPT-4o, GPT-3.5-turbo, Gemini-1.0-pro for prompt engineering and Llama-3, Code-Llama for fine-tuning. We collected the data from the Codereviewer dataset of Microsoft Research. We were able to surpass state-of-the-art pretrained model CodeReviewer by achieving over 90% BLEU in this task. At present, we are preparing the manuscript of our work for publication. 
+
             </p>
 
           </div>
