--- a/pages/research.html
+++ b/pages/research.html
@@ -11,7 +11,7 @@
         <a href="#">
 
           <figure class="blog-banner-box">
-            <img src="./assets/images/blog-1.jpg" alt="Design conferences in 2022" loading="lazy">
+            <img src="../assets/img/Research/Thesis.png" alt="Design conferences in 2022" loading="lazy">
           </figure>
 
           <div class="blog-content">
