--- a/pages/research.html
+++ b/pages/research.html
@@ -8,7 +8,7 @@
     <ul class="blog-posts-list">
 
       <li class="blog-post-item">
-        <a href="#">
+        <!-- <a href="#"> -->
 
           <figure class="blog-banner-box">
             <img src="./assets/img/Research/Thesis.png" alt="Design conferences in 2022" loading="lazy">
@@ -41,7 +41,7 @@
       </li>
 
       <li class="blog-post-item">
-        <a href="#">
+        <!-- <a href="#"> -->
 
           <!-- <figure class="blog-banner-box">
             <img src="./assets/images/blog-2.jpg" alt="Best fonts every designer" loading="lazy">
