--- a/pages/research.html
+++ b/pages/research.html
@@ -27,13 +27,14 @@
             <h4 class="blog-item-title" style="color: white;">Advancing Code Review and Code Refinement Automation Using Large Language Models</h4>
 
             <p class="blog-text">
-              Undergraduate Thesis, NLP Group, CSE-BUET <br> <br>
+              Undergraduate Thesis, NLP Group, CSE-BUET <br>
 
               Supervisors : 
               <a href="https://scholar.google.com/citations?user=jAuiNFgAAAAJ&hl=en">Dr. Anindya Iqbal(Professor, BUET-CSE)</a>
               <a href="https://toufiqueparag.github.io/toufique.github.io/">Dr. Toufique Ahmed (PostDoc, UC Davis)</a>
               Research Grant @ RISE - BUET <br>
               <a href="https://www.researchgate.net/publication/382224024_Advancing_Automatic_Code_Review_and_Code_Refinement_Generation_Using_Large_Language_Models">Abstract</a>
+              Manuscript under preparation
               
             </p>
 
@@ -62,8 +63,7 @@
             <h3 class="h3 blog-item-title">Best fonts every designer</h3> -->
 
             <p class="blog-text">
-              My undergraduate thesis project was under Dr. Anindya Iqbal and Dr. Toufique Ahmed (PostDoc, UC Davis). We studied the efficacy of language models, in automating code review and code refinement activities using few-shot prompting and Parameter-efficient Fine-tuning. We augmented static program metadata (function call graph) and natural language summary (produced with codeT5-base) with human evaluation to improve code review and code refinement generation tasks. Few-shot examples are retrieved from the training dataset using BM-25 retrieval algorithm. We used GPT-4o, GPT-3.5-turbo, Gemini-1.0-pro for prompt engineering and Llama-3, Code-Llama for fine-tuning. We collected the data from the Codereviewer dataset of Microsoft Research. We were able to surpass state-of-the-art pretrained model CodeReviewer by achieving over 90% BLEU in this task. At present, we are preparing the manuscript of our work for publication. 
-
+              We studied the efficacy of language models, in automating code review and code refinement activities using few-shot prompting and Parameter-efficient Fine-tuning. We augmented static program metadata (function call graph) and natural language summary (produced with codeT5-base) with human evaluation to improve code review and code refinement generation tasks. Few-shot examples are retrieved from the training dataset using BM-25 retrieval algorithm. We used GPT-4o, GPT-3.5-turbo, Gemini-1.0-pro for prompt engineering and Llama-3, Code-Llama for fine-tuning. We collected the data from the Codereviewer dataset of Microsoft Research. We were able to surpass state-of-the-art pretrained model CodeReviewer by achieving over 90% BLEU in this task. 
             </p>
 
           </div>
