--- a/pages/research.html
+++ b/pages/research.html
@@ -65,7 +65,7 @@
             <p class="blog-text">
               We studied the efficacy of language models, in automating code review and code refinement activities using few-shot prompting and Parameter-efficient Fine-tuning. <br><br>
               We augmented static program metadata (function call graph) and natural language summary (produced with codeT5-base) with human evaluation to improve code review and code refinement generation tasks. Few-shot examples are retrieved from the training dataset using BM-25 ranking algorithm. <br><br>
-              We used GPT-4o, GPT-3.5-turbo, Gemini-1.0-pro for prompt engineering and Llama-3, Code-Llama for fine-tuning. We collected the data from the Codereviewer dataset of Microsoft Research. <br>
+              We used GPT-4o, GPT-3.5-turbo, Gemini-1.0-pro for prompt engineering and Llama-3, Code-Llama for fine-tuning. We collected the data from the Codereviewer dataset of Microsoft Research. <br><br>
               We were able to surpass state-of-the-art pretrained model CodeReviewer by achieving over 90% BLEU in this task. 
             </p>
 
