--- a/pages/about.html
+++ b/pages/about.html
@@ -11,6 +11,32 @@
     - service
   -->
 
+  <section class="timeline">
+    <div class="title-wrapper">
+      <div class="icon-box">
+        <ion-icon name="code-slash-outline"></ion-icon>
+      </div>
+  
+      <h3 class="h3" id="ts" data-dropdown-item>News and Updates</h3>
+    </div>
+  
+    <ol class="timeline-list">
+      <li class="timeline-item">
+        <h4 class="h4 timeline-item-title">July 16, 2024</h4>
+        <p class="timeline-text">Joined as a full-time lecturer in CUB SOSE CSE, my first job offer.</p>
+      </li>
+      <li class="timeline-item">
+        <h4 class="h4 timeline-item-title">July 1, 2024</h4>
+        <p class="timeline-text">Graduated from BUET, last semester result 4.00/4.00</p>
+      </li>
+      <li class="timeline-item">
+        <h4 class="h4 timeline-item-title">Dec 09, 2023</h4>
+        <p class="timeline-text">Awarded with RISE-BUET Internal Student Research Grant 2023 for undergraduate thesis project.</p>
+      </li>
+      
+      
+    </ol>
+  </section>
   <section class="service">
 
     <h3 class="h3 service-title">News and Updates</h3>
