--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
   <section class="timeline">
     <div class="title-wrapper">
       <div class="icon-box">
-        <ion-icon name="code-slash-outline"></ion-icon>
+        <ion-icon name="newspaper-outline"></ion-icon>
       </div>
   
       <h3 class="h3" id="ts" data-dropdown-item>News and Updates</h3>
@@ -37,11 +37,9 @@
       
     </ol>
   </section>
-  <section class="service">
+  <!-- <section class="service">
 
     <h3 class="h3 service-title">News and Updates</h3>
-
-    <!-- Graduated -->
     <ul>
       <li class="service-item">
         <div class="service-content-box">
@@ -61,7 +59,7 @@
           </p>
         </div>
 
-    </ul>
+    </ul> -->
 
 
 
