--- a/pages/resume.html
+++ b/pages/resume.html
@@ -423,7 +423,7 @@
           </li>
 
           <li class="project-item  active">
-            <a href="../assets/img/PI/Digital Art & Pencil Sketch/photoshop.jpg">
+            <a href="./assets/img/PI/Digital Art & Pencil Sketch/photoshop.jpg">
       
               <figure class="project-img">
                 <div class="project-item-icon-box">
