--- a/pages/research.html
+++ b/pages/research.html
@@ -107,11 +107,11 @@
       <li class="blog-post-item">
           <div class="blog-content">
             <p class="blog-text">
-              We are studying the prediction accuracy of Large Language Models (LLMs) in detecting attack behaviors in computer systems logs. <br>
-              We constructed provenance graphs and reverse trees (children-to-parent relationships). Subsequently, we are generating event traces and classifying them. 
-              We are labeling data as either benign or malicious, with the objective of supervising Large Language Models (LLMs) for detecting attack behaviors in computer systems logs. 
-              We are embedded the temporal information of the logs to the LLMs to improve the prediction accuracy. <br>
-              We are using the logs from the DARPA OPTC and DARPA TC E3 datasets, setting up in a PostgreSQL database.
+              Currently, We are investigating the prediction accuracy of Large Language Models (LLMs) in detecting attack behaviors within computer system logs. <br><br>
+              Our approach involves constructing provenance graphs and reverse trees (children-to-parent relationships) and generating event traces for classification. 
+              We labeled the data as either benign or malicious, aiming to supervise LLMs for precise detection of 
+              attack patterns. To enhance the accuracy of predictions, we embed the temporal information from the logs into the models. <br><br>
+              The logs used in this study are sourced from the DARPA OPTC and DARPA TC E3 datasets and are structured within a PostgreSQL database.
              </p>
 
           </div>
