--- a/pages/research.html
+++ b/pages/research.html
@@ -108,7 +108,7 @@
           <div class="blog-content">
             <p class="blog-text">
               Currently, We are investigating the prediction accuracy of Large Language Models (LLMs) in detecting attack behaviors within computer system logs. <br><br>
-              Our approach involves constructing provenance graphs and reverse trees (children-to-parent relationships) and generating event traces for classification. 
+              Our approach involves constructing provenance graphs and reverse trees (children-to-parent relationships). Subsequently, we generated event traces and then classified them. 
               We labeled the data as either benign or malicious, aiming to supervise LLMs for precise detection of 
               attack patterns. To enhance the accuracy of predictions, we embed the temporal information from the logs into the models. <br><br>
               The logs used in this study are sourced from the DARPA OPTC and DARPA TC E3 datasets and are structured within a PostgreSQL database.
