--- a/pages/research.html
+++ b/pages/research.html
@@ -11,7 +11,7 @@
         <!-- <a href="#"> -->
 
           <figure class="blog-banner-box">
-            <img src="./assets/img/Research/Thesis.png" alt="Thesis" loading="lazy">
+            <img src="./assets/img/Research/Thesis.png" alt="Thesis">
           </figure>
 
           <div class="blog-content">
@@ -47,7 +47,7 @@
         <!-- <a href="#"> -->
 
           <!-- <figure class="blog-banner-box">
-            <img src="./assets/images/blog-2.jpg" alt="Best fonts every designer" loading="lazy">
+            <img src="./assets/images/blog-2.jpg" alt="Best fonts every designer">
           </figure> -->
 
           <div class="blog-content">
@@ -78,7 +78,7 @@
         <!-- <a href="#"> -->
 
           <figure class="blog-banner-box">
-            <img src="./assets/img/Research/security.png" alt="NLP X Security" loading="lazy">
+            <img src="./assets/img/Research/security.png" alt="NLP X Security">
           </figure>
 
           <div class="blog-content">
@@ -123,7 +123,7 @@
         <!-- <a href="#"> -->
 
           <figure class="blog-banner-box">
-            <img src="./assets/img/Research/Thesis.png" alt="Design conferences in 2022" loading="lazy">
+            <img src="../assets/img/Research/image_style.png" alt="image-style">
           </figure>
 
           <div class="blog-content">
