--- a/pages/research.html
+++ b/pages/research.html
@@ -152,7 +152,9 @@
 
             <p class="blog-text">
               We generate a new image by combining the content of one image with the style of another image while optimizing for minimal computational resource usage. We utilized Neural style transfer models : VGG16 and ResNet-50 and GAN model : CycleGAN. <br>
-              With the help of these models, we are able to turn any picture into a painting of any famous artist. Paintings by Monet (Giverny in springtime), Pissarro (Chestnut trees, Louveciennes, Spring - 1870), and Van Gogh(Starry Night) are used for result picture in the right side. 
+              The output from the decoder is passed to VGG from which we extract features and calculate style loss and content loss. Then we calculate perceptual loss from the weighted sum of Style loss and content loss. For content loss, higher layers are used. For style loss, lower layers of networks are used. In defining our loss functions according to our content and style image shapes, we utilized the Gram Matrix by which we could obtain the MSE loss between content and style images. 
+              We utilized FID, SSIM, and PSNR as evaluation metrics. <br>
+              With the help of these models, we are able to turn any picture into a painting of any famous artist. Paintings by Monet (Giverny in springtime), Pissarro (Chestnut trees, Louveciennes, Spring - 1870), and Van Gogh(Starry Night) are used for result picture. 
               Now, we are trying to transfer the style of calligraphy to a text image.
             </p>
           </div>
