--- a/pages/research.html
+++ b/pages/research.html
@@ -123,7 +123,7 @@
         <!-- <a href="#"> -->
 
           <figure class="blog-banner-box">
-            <img src="../assets/img/Research/image_style.png" alt="image-style">
+            <img src="./assets/img/Research/image_style.png" alt="image-style">
           </figure>
 
           <div class="blog-content">
