--- a/pages/resume.html
+++ b/pages/resume.html
@@ -409,7 +409,7 @@
         <ul class="project-list">
   
           <li class="project-item  active">
-            <a href="../assets/img/PI/Digital Art & Pencil Sketch/adobe.jpg">
+            <a href="./assets/img/PI/Digital Art & Pencil Sketch/adobe.jpg">
       
               <figure class="project-img">
                 <div class="project-item-icon-box">
