--- a/pages/research.html
+++ b/pages/research.html
@@ -110,7 +110,7 @@
               Currently, We are investigating the prediction accuracy of Large Language Models (LLMs) in detecting attack behaviors within computer system logs. <br><br>
               Our approach involves constructing provenance graphs and reverse trees (children-to-parent relationships). Subsequently, we generated event traces and then classified them. 
               We labeled the data as either benign or malicious, aiming to supervise LLMs for precise detection of 
-              attack patterns.<br><br>
+              attack behavior.<br><br>
               The logs used in this study are sourced from the DARPA OPTC and DARPA TC E3 datasets and are structured within a PostgreSQL database.
              </p>
 
@@ -151,8 +151,8 @@
           <div class="blog-content">
 
             <p class="blog-text">
-              We generate a new image by combining the content of one image with the style of another image while optimizing for minimal computational resource usage. We utilized Neural style transfer models : VGG16 and ResNet-50 and GAN model : CycleGAN. <br>
-              We extract features and calculate style loss and content loss. Then we calculate perceptual loss from the weighted sum of Style loss and content loss. In defining our loss functions according to our content and style image shapes, we utilized the Gram Matrix and  FID, SSIM, and PSNR as evaluation metrics. <br>
+              We generate a new image by combining the content of one image with the style of another image while optimizing for minimal computational resource usage. We utilized Neural style transfer models : VGG16 and ResNet-50 and GAN model : CycleGAN. <br><br>
+              We extract features and calculate style loss and content loss. Then we calculate perceptual loss from the weighted sum of Style loss and content loss. In defining our loss functions according to our content and style image shapes, we utilized the Gram Matrix and  FID, SSIM, and PSNR as evaluation metrics. <br><br>
               Now, we are trying to transfer the style of calligraphy to a text image.
             </p>
           </div>
