--- a/pages/projects.html
+++ b/pages/projects.html
@@ -61,7 +61,7 @@
   <ul class="projects-list">
 
     <li class="projects-item  active" data-filter-item data-category="machine learning">
-      <a href="https://github.com/Najib-Haq/Similarity-through-extracted-phrases-using-Self-Cross-Attention-Bert">
+      <a href="https://github.com/ayeshathoi/Forecasting-Ground-Level-Water/">
         <h2 class="projects-title">Ground-Water-Level-Prediction</h2>
 
         <figure class="projects-img">
@@ -69,34 +69,41 @@
             <ion-icon name="eye-outline"></ion-icon>
           </div>
 
-          <img src="./assets/images/nhs/scbert.png" alt="ppml" loading="lazy">
+          <img src="./assets/img/projects/gwl.png" alt="gwl">
         </figure>
 
         
         <p class="projects-category"><a href="https://github.com/Najib-Haq/Similarity-through-extracted-phrases-using-Self-Cross-Attention-Bert"><u>View on Github</u></a></p>
-        <p class="projects-tech-stack">Pytorch, Huggingface, Sklearn</p>
-        <p class="projects-category">Term Project for CSE 472: Machine Learning Sessional offered by the CSE Department of BUET. This project modifies the existing architecture of Bert to introduce self-cross attention and measures the performances on a semantic similarity task.</p>
+        <p class="projects-tech-stack">Python,seaborn, scipy numPy, Pandas</p>
+        <p class="projects-category">
+          At first, we preprocess the data, then used many types of regression models to predict the ground level water in different regions of Bangladesh to install deep tube wells. For seasonal forecasting, we are using ARIMA, LSTM and GRU models.
+          It is a funded research project by WARPO (Water Resources Planning Organization) under the Ministry of Water Resources, Government of Bangladesh.
+          Supervisor: Dr. A. B. M. Alim Al Islam (Professor, CSE, BUET)
+        </p>
 
       </a>
     </li>
 
 
     <li class="projects-item  active" data-filter-item data-category="machine learning">
-      <a href="https://github.com/Najib-Haq/Similarity-through-extracted-phrases-using-Self-Cross-Attention-Bert">
-        <h2 class="projects-title">Similarity-through-extracted-phrases-using-Self-Cross-Attention-Bert</h2>
+      <a href="https://github.com/ayeshathoi/Forecasting-Ground-Level-Water/">
+        <h2 class="projects-title">Vehicle Object Detection in context of BD traffic</h2>
 
         <figure class="projects-img">
           <div class="projects-item-icon-box">
             <ion-icon name="eye-outline"></ion-icon>
           </div>
 
-          <img src="./assets/images/nhs/scbert.png" alt="ppml" loading="lazy">
+          <img src="./assets/img/projects/dlEnigma.png" alt="detection">
         </figure>
 
         
         <p class="projects-category"><a href="https://github.com/Najib-Haq/Similarity-through-extracted-phrases-using-Self-Cross-Attention-Bert"><u>View on Github</u></a></p>
         <p class="projects-tech-stack">Pytorch, Huggingface, Sklearn</p>
-        <p class="projects-category">Term Project for CSE 472: Machine Learning Sessional offered by the CSE Department of BUET. This project modifies the existing architecture of Bert to introduce self-cross attention and measures the performances on a semantic similarity task.</p>
+        <p class="projects-category">
+          We address complex task of object detection in driving environments across 9 districts in Bangladesh using BadODD dataset. This dataset contains 9825 images with 78,943 Objects with 13 different classes. We employed transfer learning using three different approaches, such as : YOLOv6 and YOLOv8, Novel transformer-based models such as rtDETR and CoDETR. We also explored Faster R-CNN.
+          It was a part of a competition, where we secured 8th position among around 100 teams. 
+        </p>
 
       </a>
     </li>
