--- a/pages/projects.html
+++ b/pages/projects.html
@@ -102,7 +102,7 @@
         <p class="projects-tech-stack">Pytorch, Huggingface, Sklearn</p>
         <p class="projects-category">
           We address complex task of object detection in driving environments across 9 districts in Bangladesh using BadODD dataset. This dataset contains 9825 images with 78,943 Objects with 13 different classes. We employed transfer learning using three different approaches, such as : YOLOv6 and YOLOv8, Novel transformer-based models such as rtDETR and CoDETR. We also explored Faster R-CNN.
-          It was a part of a competition, where we secured 8th position among around 100 teams. 
+          It was a part of SUST Deep Learning Enigma competition in the field of Computer Vision, where we secured 8th position among around 100 teams. 
         </p>
 
       </a>
